--- a/front/package.json
+++ b/front/package.json
@@ -9,8 +9,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@codemirror/lang-javascript": "^6.1.5",
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
+        "@uiw/react-codemirror": "^4.19.11",
         "axios": "^1.3.4",
         "flowbite": "^1.6.4",
         "flowbite-react": "^0.4.2",
