--- a/front/package.json
+++ b/front/package.json
@@ -10,8 +10,11 @@
     },
     "dependencies": {
         "@codemirror/lang-javascript": "^6.1.5",
+        "@codemirror/view": "^6.9.3",
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
+        "@lezer/highlight": "^1.1.4",
+        "@uiw/codemirror-themes": "^4.19.11",
         "@uiw/react-codemirror": "^4.19.11",
         "axios": "^1.3.4",
         "flowbite": "^1.6.4",
