--- a/front/.yarnrc.yml
+++ b/front/.yarnrc.yml
@@ -1,3 +1,9 @@
-yarnPath: .yarn/releases/yarn-3.5.0.cjs
-nodeLinker: "pnp"
+nodeLinker: pnp
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
+    spec: "@yarnpkg/plugin-typescript"
+
 pnpMode: loose
+
+yarnPath: .yarn/releases/yarn-3.5.0.cjs
