--- a/front/package.json
+++ b/front/package.json
@@ -33,6 +33,7 @@
         "@typescript-eslint/eslint-plugin": "latest",
         "@typescript-eslint/parser": "latest",
         "@vitejs/plugin-react-swc": "^3.0.0",
+        "@yarnpkg/pnpify": "^4.0.0-rc.42",
         "autoprefixer": "^10.4.14",
         "babel-plugin-styled-components": "^2.0.7",
         "cssnano": "^6.0.0",
@@ -48,7 +49,7 @@
         "postcss": "^8.4.21",
         "prettier": "^2.8.7",
         "tailwindcss": "^3.3.1",
-        "typescript": "^5.0.3",
+        "typescript": "^5.0.4",
         "vite": "^4.2.0",
         "vite-tsconfig-paths": "^4.0.7"
     },
