--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -6,7 +6,6 @@
     },
     "extends": [
         "airbnb",
-        "prettier",
         "eslint:recommended",
         "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
@@ -16,8 +15,7 @@
         "plugin:import/typescript",
         // import 관련 규칙 모음
         "plugin:prettier/recommended",
-        "prettier/@typescript-eslint",
-        "prettier/react"
+        "prettier"
         // prettier 관련 규칙 모음
     ],
     "overrides": [],
