--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,9 @@
         "flowbite-react": "^0.4.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-markdown": "^8.0.7",
+        "react-syntax-highlighter": "^15.5.0",
+        "remark-gfm": "^3.0.1",
         "styled-components": "^5.3.9"
     },
     "devDependencies": {
@@ -29,6 +32,7 @@
         "@types/prettier": "^2",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
+        "@types/react-syntax-highlighter": "^15",
         "@types/styled-components": "^5",
         "@typescript-eslint/eslint-plugin": "latest",
         "@typescript-eslint/parser": "latest",
