--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build",
+        "build":"vite build",
+        "tsc": "tsc",
         "preview": "vite preview"
     },
     "dependencies": {
@@ -22,17 +23,16 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-markdown": "^8.0.7",
-        "react-syntax-highlighter": "^15.5.0",
         "remark-gfm": "^3.0.1",
         "styled-components": "^5.3.9"
     },
     "devDependencies": {
         "@iconify/react": "^4.1.0",
+        "@tailwindcss/typography": "^0.5.9",
         "@types/eslint": "^8",
         "@types/prettier": "^2",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
-        "@types/react-syntax-highlighter": "^15",
         "@types/styled-components": "^5",
         "@typescript-eslint/eslint-plugin": "latest",
         "@typescript-eslint/parser": "latest",
