--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build":"vite build",
+        "build": "vite build",
         "tsc": "tsc",
         "preview": "vite preview"
     },
@@ -20,19 +20,24 @@
         "axios": "^1.3.4",
         "flowbite": "^1.6.4",
         "flowbite-react": "^0.4.2",
+        "localforage": "^1.10.0",
+        "match-sorter": "^6.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-markdown": "^8.0.7",
+        "react-router-dom": "^6.11.1",
         "remark-gfm": "^3.0.1",
-        "styled-components": "^5.3.9"
+        "sort-by": "^1.2.0",
+        "styled-components": "^5.3.9",
+        "v6": "^0.0.0"
     },
     "devDependencies": {
         "@iconify/react": "^4.1.0",
         "@tailwindcss/typography": "^0.5.9",
         "@types/eslint": "^8",
         "@types/prettier": "^2",
-        "@types/react": "^18.0.28",
-        "@types/react-dom": "^18.0.11",
+        "@types/react": "^18.2.5",
+        "@types/react-dom": "^18.2.4",
         "@types/styled-components": "^5",
         "@typescript-eslint/eslint-plugin": "latest",
         "@typescript-eslint/parser": "latest",
