--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -30,8 +30,8 @@
     },
     "plugins": ["react", "@typescript-eslint", "react-hooks","import"],
     "rules": {
-        "prettier/prettier": "error",
-        "import/no-unresolved": "error",
+//        "prettier/prettier": "error",
+//        "import/no-unresolved": "error",
         "import/extensions": [
             "error",
             "ignorePackages",
@@ -40,9 +40,11 @@
                 "jsx": "never",
                 "ts": "never",
                 "tsx": "never"
+
             }
         ],
-        "react/react-in-jsx-scope": "off",
+
+//        "react/react-in-jsx-scope": "off",
         "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".jsx"] }]
     },
     "settings": {
