--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
         "@lezer/highlight": "^1.1.4",
         "@uiw/codemirror-themes": "^4.19.11",
         "@uiw/react-codemirror": "^4.19.11",
+        "@yarnpkg/plugin-pnp": "^4.0.0-rc.43",
         "axios": "^1.3.4",
         "flowbite": "^1.6.4",
         "flowbite-react": "^0.4.2",
@@ -32,6 +33,7 @@
         "v6": "^0.0.0"
     },
     "devDependencies": {
+        "@babel/plugin-transform-react-jsx": "^7.21.5",
         "@iconify/react": "^4.1.0",
         "@tailwindcss/typography": "^0.5.9",
         "@types/eslint": "^8",
@@ -42,7 +44,7 @@
         "@typescript-eslint/eslint-plugin": "latest",
         "@typescript-eslint/parser": "latest",
         "@vitejs/plugin-react-swc": "^3.0.0",
-        "@yarnpkg/pnpify": "^4.0.0-rc.42",
+        "@yarnpkg/pnpify": "^4.0.0-rc.43",
         "autoprefixer": "^10.4.14",
         "babel-plugin-styled-components": "^2.0.7",
         "cssnano": "^6.0.0",
@@ -56,8 +58,10 @@
         "eslint-plugin-react": "latest",
         "eslint-plugin-react-hooks": "^4.6.0",
         "postcss": "^8.4.21",
-        "prettier": "^2.8.7",
-        "tailwindcss": "^3.3.1",
+        "prettier": "^2.8.8",
+        "prettier-plugin-tailwindcss": "^0.2.8",
+        "tailwindcss": "^3.3.2",
+        "ts-loader": "^9.4.2",
         "typescript": "^5.0.4",
         "vite": "^4.2.0",
         "vite-tsconfig-paths": "^4.0.7"
