--- a/front/src/.babelrc
+++ b/front/src/.babelrc
@@ -1,3 +1,11 @@
 {
-  "plugins": ["babel-plugin-styled-components"]
+    "plugins": [
+        [
+            "@babel/plugin-transform-react-jsx",
+            {
+                "runtime": "automatic"
+            }
+        ],
+        "babel-plugin-styled-components"
+    ]
 }
