--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -1,26 +1,21 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
-    "skipLibCheck": true,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "baseUrl": ".", // "paths"가 있는 경우 반드시 지정되어야함.
-    "paths": {
-      "@": ["./src"],
-      "@/*": ["./src/*"]
-    }
-  },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+    "compilerOptions": {
+        "target": "esnext",
+        "noImplicitAny": true,
+        "strictNullChecks": true,
+        // "moduleResolution": "",
+        "sourceMap": true,
+        "module": "esnext",
+        "noEmit": true,
+        "jsx": "react-jsx",
+        "baseUrl": ".", // "paths"가 있는 경우 반드시 지정되어야함.
+        "removeComments": true,
+        "paths": {
+            "@": ["./src"],
+            "@/*": ["./src/*"]
+        },
+        "typeRoots": ["./@types", "./node_modules/@types"]
+    },
+    "include": ["src"],
+    "references": [{ "path": "./tsconfig.node.json" }]
 }
