--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -28,10 +28,10 @@
             "jsx": true
         }
     },
-    "plugins": ["react", "@typescript-eslint", "react-hooks","import"],
+    "plugins": ["react", "@typescript-eslint", "react-hooks", "import"],
     "rules": {
-//        "prettier/prettier": "error",
-//        "import/no-unresolved": "error",
+        //        "prettier/prettier": "error",
+        //        "import/no-unresolved": "error",
         "import/extensions": [
             "error",
             "ignorePackages",
@@ -40,20 +40,16 @@
                 "jsx": "never",
                 "ts": "never",
                 "tsx": "never"
-
             }
         ],
 
-//        "react/react-in-jsx-scope": "off",
+        "react/react-in-jsx-scope": "off",
         "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".jsx"] }]
     },
     "settings": {
         "import/external-module-folders": [".yarn"],
         "import/parsers": {
-            "@typescript-eslint/parser": [
-                ".ts",
-                ".tsx"
-            ]
+            "@typescript-eslint/parser": [".ts", ".tsx"]
         }
     }
 }
