--- a/scratch/package.json
+++ b/scratch/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
