--- a/front/package.json
+++ b/front/package.json
@@ -30,6 +30,7 @@
         "react-dom": "^18.2.0",
         "react-markdown": "^8.0.7",
         "react-router-dom": "^6.11.1",
+        "recoil": "^0.7.7",
         "remark-gfm": "^3.0.1",
         "sort-by": "^1.2.0",
         "styled-components": "^5.3.9",
