--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "@uiw/react-codemirror": "^4.19.11",
     "@yarnpkg/plugin-pnp": "^4.0.0-rc.43",
     "axios": "^1.3.4",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
     "framer-motion": "^10.12.10",
@@ -71,7 +72,7 @@
     "vite": "^4.2.0",
     "vite-tsconfig-paths": "^4.0.7"
   },
-  "packageManager": "yarn@3.5.0",
+  "packageManager": "yarn@1.22.19",
   "dependenciesMeta": {
     "eslint@8.38.0": {
       "unplugged": true
