--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -1,94 +1,71 @@
 {
-  "env": {
-    "browser": true,
-    "node": true,
-    "jest": true,
-    "es6": true
-  },
-  "extends": [
-    "airbnb",
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:@typescript-eslint/recommended",
-    // typescript 표준 규칙 모음
-    "plugin:import/errors",
-    "plugin:import/warnings",
-    "plugin:import/typescript",
-    // import 관련 규칙 모음
-    "plugin:prettier/recommended",
-    "prettier"
-    // prettier 관련 규칙 모음
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module",
-    "project": [
-      "./tsconfig.json"
-    ],
-    "ecmaFeatures": {
-      "jsx": true,
-      "tsx": true
-    }
-  },
-  "plugins": [
-    "react",
-    "@typescript-eslint",
-    "react-hooks",
-    "import"
-  ],
-  "rules": {
-    //        "prettier/prettier": "error",
-    //        "import/no-unresolved": "error",
-        // "import/no-unresolved": "off",
-    "import/extensions": [
-      "error",
-      "ignorePackages",
-      {
-        "js": "never",
-        "jsx": "never",
-        "ts": "never",
-        "tsx": "never"
-      }
-    ],
-    "react/react-in-jsx-scope": "off",
-    "react/jsx-filename-extension": [
-      1,
-      {
-        "extensions": [
-          ".tsx",
-          ".jsx"
-        ]
-      }
-    ]
-  },
-  "settings": {
-    "import/external-module-folders": [
-      ".yarn"
-    ],
-    "import/parsers": {
-      "@typescript-eslint/parser": [
-        ".ts",
-        ".tsx"
-      ]
+    "env": {
+        "browser": true,
+        "node": true,
+        "jest": true,
+        "es6": true
     },
-    "import/resolver": {
-      "node": {
-        "extensions": [
-          ".js",
-          ".jsx",
-          ".ts",
-          ".tsx"
-        ],
-        "moduleDirectory": [
-          "node_modules",
-          "@types"
-        ]
-      },
-      "typescript": {}
-      // this loads <rootdir>/tsconfig.json to eslint
+    "extends": [
+        "airbnb",
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:@typescript-eslint/recommended",
+        // typescript 표준 규칙 모음
+        "plugin:import/errors",
+        "plugin:import/warnings",
+        "plugin:import/typescript",
+        // import 관련 규칙 모음
+        "plugin:prettier/recommended",
+        "prettier"
+        // prettier 관련 규칙 모음
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module",
+        "project": ["./tsconfig.json"],
+        "ecmaFeatures": {
+            "jsx": true,
+            "tsx": true
         }
-        
+    },
+    "plugins": ["react", "@typescript-eslint", "react-hooks", "import"],
+    "rules": {
+        //        "prettier/prettier": "error",
+        //        "import/no-unresolved": "error",
+        // "import/no-unresolved": "off",
+        "allowForLoopAfterthoughts": true,
 
-  }
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+                "js": "never",
+                "jsx": "never",
+                "ts": "never",
+                "tsx": "never"
+            }
+        ],
+        "react/react-in-jsx-scope": "off",
+        "react/jsx-filename-extension": [
+            1,
+            {
+                "extensions": [".tsx", ".jsx"]
+            }
+        ]
+    },
+    "settings": {
+        "import/external-module-folders": [".yarn"],
+        "import/parsers": {
+            "@typescript-eslint/parser": [".ts", ".tsx"]
+        },
+        "import/resolver": {
+            "node": {
+                "extensions": [".js", ".jsx", ".ts", ".tsx"],
+                "moduleDirectory": ["node_modules", "@types"]
+            },
+            "typescript": {}
+            // this loads <rootdir>/tsconfig.json to eslint
+        }
+    }
 }
