--- a/front/package.json
+++ b/front/package.json
@@ -10,11 +10,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@codemirror/lang-cpp": "^6.0.2",
         "@codemirror/lang-javascript": "^6.1.5",
         "@codemirror/view": "^6.9.3",
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
         "@lezer/highlight": "^1.1.4",
+        "@uiw/codemirror-theme-vscode": "^4.21.3",
         "@uiw/codemirror-themes": "^4.19.11",
         "@uiw/react-codemirror": "^4.19.11",
         "@yarnpkg/plugin-pnp": "^4.0.0-rc.43",
