--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,8 +10,9 @@ services:
             - "3000:3000"
         environment:
             CHATGPT_API_KEY: ${CHATGPT_API_KEY}
-            DEEPL_API_KEY: ${DEEPL_API_KEY}
-            DEEPL_API_HOST: ${DEEPL_API_HOST}
+            AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+            AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+            AWS_REGION: ${AWS_REGION}
     mariadb:
         image: mariadb
         environment:
