--- a/front/package.json
+++ b/front/package.json
@@ -5,6 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
+        "prod": "vite serve --mode production",
         "build": "vite build",
         "type-check": "tsc -watch",
         "preview": "vite preview"
