--- a/api/openapi/api.yaml
+++ b/api/openapi/api.yaml
@@ -178,6 +178,15 @@ components:
         Developic에서 사용되는 코드 데이터입니다.
         코드 데이터의 Escape를 방지하기 위해 Base64로 인코딩되어 전송, 보관됩니다.
       example: 7J6s7ZmY7J207ZiVIOuwlOuztA==
+    UserID:
+      type: string
+      description: Developic에서 사용되는 유저의 고유 ID입니다.
+      example: 1a2b3c4d
+      maxLength: 8
+    Nickname:
+      type: string
+      description: Developic에서 사용되는 유저의 이름입니다.
+      example: "김개발"
 paths:
   /problems:
     post:
@@ -297,7 +306,21 @@ paths:
               schema:
                 type: object
                 properties:
+                  nickname:
+                    $ref: "#/components/schemas/Nickname"
                   elo_score:
                     $ref: "#/components/schemas/ELOScore"
                 required:
                   - elo_score
+                  - nickname
+        404:
+            description: 유저가 존재하지 않는 경우입니다.
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/Error"
+                example:
+                  code: "UserNotFound"
+                  message: "존재하지 않는 유저입니다."
+        default:
+          $ref: "#/components/responses/InternalServerError"
