GetProblem시 409 에러 메시지 자세하게 리턴

--- a/api/openapi/api.yaml
+++ b/api/openapi/api.yaml
@@ -236,6 +236,13 @@ paths:
           description: 존재하지 않는 문제 ID를 입력한 상태입니다.
         409:
           description: 문제 생성이 접수되었으나, 시스템에서 아직 문제 생성이 완료되지 않은 상태입니다.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+              example:
+                code: "ProblemNotReady"
+                message: "문제가 아직 준비되지 않았습니다. 잠시만 더 기다려 주세요."
         default:
           $ref: "#/components/responses/InternalServerError"
   /submit:
