requestProblem requestBody required로 바꿈

--- a/api/openapi/api.yaml
+++ b/api/openapi/api.yaml
@@ -192,6 +192,7 @@ paths:
     post:
       operationId: requestProblem
       requestBody:
+        required: true
         content:
           application/json:
             schema:
