--- a/front/package.json
+++ b/front/package.json
@@ -35,6 +35,7 @@
         "remark-gfm": "^3.0.1",
         "sort-by": "^1.2.0",
         "styled-components": "^5.3.9",
+        "uuid": "^9.0.0",
         "v6": "^0.0.0"
     },
     "devDependencies": {
@@ -45,6 +46,7 @@
         "@types/react": "^18.2.5",
         "@types/react-dom": "^18.2.4",
         "@types/styled-components": "^5",
+        "@types/uuid": "^9.0.2",
         "@typescript-eslint/eslint-plugin": "latest",
         "@typescript-eslint/parser": "latest",
         "@vitejs/plugin-react-swc": "^3.0.0",
