에러 코드, 메시지 OpenAPI 스펙에서 정의, 타입 생성

--- a/api/openapi/api.yaml
+++ b/api/openapi/api.yaml
@@ -84,13 +84,38 @@ components:
         - message
       properties:
         code:
-          type: string
-          description: "오류 구분 코드입니다."
-          example: "4c4d3b2a"
+          $ref: "#/components/schemas/ErrorCode"
         message:
-          type: string
-          description: "상세한 오류 정보를 알려주는 메시지입니다."
-          example: "you don't have the permission to access this resource"
+          $ref: "#/components/schemas/ErrorMessage"
+    ErrorCode:
+      type: string
+      description: "Developic에서 사용되는 오류 코드입니다."
+      enum:
+        - "UserNotFound"
+        - "ProblemNotFound"
+        - "ProblemNotReady"
+        - "RecordNotFound"
+        - "InvalidAuthorization"
+        - "ServerError"
+      default: "ServerError"
+    ErrorMessage:
+      type: string
+      description: "Developic에서 사용되는 오류 메시지입니다."
+      enum:
+        - "해당 유저를 찾을 수 없습니다."
+        - "해당 문제를 찾을 수 없습니다."
+        - "해당 문제는 현재 생성 중입니다."
+        - "해당 결과 보고서를 찾을 수 없습니다."
+        - "유효하지 않은 인증 정보입니다."
+        - "서버 내부 오류가 발생했습니다."
+      x-enum-varnames:
+        - "UserNotFoundMessage"
+        - "ProblemNotFoundMessage"
+        - "ProblemNotReadyMessage"
+        - "RecordNotFoundMessage"
+        - "InvalidAuthorizationMessage"
+        - "ServerErrorMessage"
+      default: "서버 내부 오류가 발생했습니다."
     ELOScore:
       type: integer
       format: int32
@@ -328,6 +353,15 @@ paths:
                 required:
                   - elo_score
                   - nickname
+        401:
+          description: 토큰이 잘못되었거나, 존재하지 않는 경우입니다.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+              example:
+                code: "InvalidToken"
+                message: "토큰이 잘못되었습니다."
         404:
           description: 유저가 존재하지 않는 경우입니다.
           content:
