--- a/api/openapi/api.yaml
+++ b/api/openapi/api.yaml
@@ -96,6 +96,7 @@ components:
         - "ProblemNotReady"
         - "RecordNotFound"
         - "InvalidAuthorization"
+        - "RecordNotFound"
         - "ServerError"
       default: "ServerError"
     ErrorMessage:
@@ -105,7 +106,7 @@ components:
         - "해당 유저를 찾을 수 없습니다."
         - "해당 문제를 찾을 수 없습니다."
         - "해당 문제는 현재 생성 중입니다."
-        - "해당 결과 보고서를 찾을 수 없습니다."
+        - "해당 레코드를 찾을 수 없습니다."
         - "유효하지 않은 인증 정보입니다."
         - "서버 내부 오류가 발생했습니다."
       x-enum-varnames:
@@ -286,6 +287,15 @@ paths:
       responses:
         202:
           $ref: "#/components/responses/202Submit"
+        404:
+          description: 존재하지 않는 문제 ID를 입력한 상태입니다.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+              example:
+                code: "ProblemNotFound"
+                message: "문제가 존재하지 않습니다. 문제 ID를 확인해 주세요."
         default:
           $ref: "#/components/responses/InternalServerError"
   /records/{id}:
