--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,22 +1,26 @@
 version: "3"
 services:
-    app:
-        build:
-            context: .
-            dockerfile: dev.dockerfile
-        volumes:
-            - ./:/app
-        ports:
-            - "3000:3000"
-        environment:
-            CHATGPT_API_KEY: ${CHATGPT_API_KEY}
-            AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-            AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-            AWS_REGION: ${AWS_REGION}
-    mariadb:
-        image: mariadb
-        environment:
-            MARIADB_ROOT_PASSWORD: teamgrit8266
-            MARIADB_DATABASE: aiign
-        ports:
-            - "3306:3306"
+  app:
+    build:
+      context: .
+      dockerfile: dev.dockerfile
+    volumes:
+      - ./:/app
+    ports:
+      - "3000:3000"
+    environment:
+      CHATGPT_API_KEY: ${CHATGPT_API_KEY}
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      AWS_REGION: ${AWS_REGION}
+  mariadb:
+    image: mariadb
+    environment:
+      MARIADB_ROOT_PASSWORD: teamgrit8266
+      MARIADB_DATABASE: aiign
+    ports:
+      - "3306:3306"
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
