--- a/front/package.json
+++ b/front/package.json
@@ -9,13 +9,15 @@
     "build": "vite build --mode production",
     "type-check": "tsc -watch",
     "preview": "vite preview",
-    "test-generator":"npx playwright codegen http://localhost:5173",
-    "test-ui":"npx playwright test --ui",
-    "test":"npx playwright test"
+    "test-generator": "npx playwright codegen http://localhost:5173",
+    "test-ui": "npx playwright test --ui",
+    "test": "npx playwright test"
   },
   "dependencies": {
     "@codemirror/lang-cpp": "^6.0.2",
     "@codemirror/lang-javascript": "^6.1.5",
+    "@codemirror/language": "^6.8.0",
+    "@codemirror/legacy-modes": "^6.3.2",
     "@codemirror/view": "^6.9.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
